<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/top_buttons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2.02"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/day_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/day_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_sun_normal"
                android:tint="@color/black"/>
            <TextView
                android:id="@+id/day_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Day"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <!--<View-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="0.01"-->
            <!--android:background="@color/grey_color" />-->
        <!--<LinearLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center"-->
            <!--android:visibility="gone"-->
            <!--android:orientation="horizontal">-->
            <!--<ImageButton-->
                <!--android:id="@+id/day_night_button"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@android:color/transparent"-->
                <!--android:src="@drawable/icon_sun_normal"-->
                <!--android:tint="@color/black"/>-->
            <!--<TextView-->
                <!--android:id="@+id/day_night_text"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Sapia"-->
                <!--android:textColor="@drawable/font_text_selector"-->
                <!--android:layout_marginLeft="5dp"/>-->
        <!--</LinearLayout>-->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="@color/grey_color" />
        <LinearLayout
            android:id="@+id/night_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/night_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_moon_normal"
                android:tint="@color/black"/>
            <TextView
                android:id="@+id/night_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Night"
                android:textColor="@drawable/font_text_selector"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/first_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/top_buttons"
        android:background="@color/grey_color" />
    <LinearLayout
        android:id="@+id/fontLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/first_separator"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4.0">
        <com.folioreader.view.StyleableTextView
            android:id="@+id/btn_font_andada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/andada"
            android:textSize="17sp"
            app:folio_font="@string/andada_font"
            android:textColor="@drawable/font_text_selector"/>
        <com.folioreader.view.StyleableTextView
            android:id="@+id/btn_font_lato"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/lato"
            android:textSize="17sp"
            app:folio_font="@string/lato_font"
            android:textColor="@drawable/font_text_selector"/>
        <com.folioreader.view.StyleableTextView
            android:id="@+id/btn_font_lora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/lora"
            android:textSize="17sp"
            app:folio_font="@string/lora_font"
            android:textColor="@drawable/font_text_selector"/>
        <com.folioreader.view.StyleableTextView
            android:id="@+id/btn_font_raleway"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/raleway"
            android:textSize="17sp"
            app:folio_font="@string/raleway_font"
            android:textColor="@drawable/font_text_selector"/>
    </LinearLayout>
    <View
        android:id="@+id/second_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/fontLayout"
        android:background="@color/grey_color" />
    <RelativeLayout android:id="@+id/font_size_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:layout_below="@+id/second_separator"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/small_font"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="fitCenter"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_font_small"
            android:tint="@color/black"/>
        <SeekBar
            android:id="@+id/seekbar_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/big_font"
            android:layout_toRightOf="@+id/small_font"
            android:max="4"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:minHeight="0.2dp"
            android:maxHeight="0.2dp"
            android:padding="16dp" />
        <ImageView
            android:id="@+id/big_font"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_font_big"
            android:tint="@color/black"/>
    </RelativeLayout>
    <View
        android:id="@+id/third_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/font_size_layout"
        android:background="@color/grey_color"/>
    <LinearLayout
        android:id="@+id/orientationLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/third_separator"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4.01">
        <com.folioreader.view.StyleableTextView
            android:id="@+id/btn_vertical_orentation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="vertical"
            android:textColor="@drawable/font_text_selector"
            android:textSize="17sp"
            app:folio_font="@string/andada_font" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="@color/grey_color" />
        <com.folioreader.view.StyleableTextView
            android:id="@+id/btn_horizontal_orentation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="horizontal"
            android:textColor="@drawable/font_text_selector"
            android:textSize="17sp"
            app:folio_font="@string/lato_font" />
    </LinearLayout>
</RelativeLayout>